# TinyMaix

./: CMakeLists.txt
include/: tm_port.h
src/: tm_layers.c  tm_model.c
zephyr/: CMakeLists.txt  Kconfig  module.yml
zephyr/mnist/: .gitignore  CMakeLists.txt  prj.conf
zephyr/mnist/src/: main.c
